--- a/naton-project.html
+++ b/naton-project.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>naton project banai</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    
-</body>
+    <h1>Total workplace</h1>
+    <h2>some one push it for </h2>
+</body><h3>i like to do</h3>
+<h4>sorry for redrawn</h4>
 </html>
