--- a/naton-project.html
+++ b/naton-project.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <h1>Total workplace</h1>
+    <h2>i can push to githab</h2>
     <h2>some one push it for </h2>
 </body><h3>i like to do</h3>
 <h4>sorry for redrawn</h4>
+<img src="pal.jfif" alt="">
+<img src="lal.jfif" alt="">
 </html>
