--- a/naton-project.html
+++ b/naton-project.html
@@ -13,7 +13,7 @@
     <h2>some one push it for </h2>
 </body><h3>i like to do</h3>
 <h4>sorry for redrawn</h4>
-<img src="pal.jfif" alt="">
-<img src="lal.jfif" alt="">
-<img src="images/pal.jfif" alt="">
+<img src="images/pal.JFIF" alt="">
+<img src="images/PAL.JFIF" alt="">
+
 </html>
