--- a/naton-project.html
+++ b/naton-project.html
@@ -17,5 +17,6 @@
 <h4>sorry for redrawn</h4>
 <img src="images/pal.JFIF" alt="">
 <img src="images/PAL.JFIF" alt="">
+<img src="pal.jfif" alt="">
 
 </html>
