--- a/naton-project.html
+++ b/naton-project.html
@@ -18,5 +18,6 @@
 <img src="images/pal.JFIF" alt="">
 <img src="images/PAL.JFIF" alt="">
 <img src="pal.jfif" alt="">
+<img src="images/lal.jfif" alt="">
 
 </html>
