--- a/naton-project.html
+++ b/naton-project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>naton project banai</title>
+    <title>naton project banai r ki</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +14,9 @@
 </body><h3>i like to do. the time squre line.
     that i show the project.
 </h3>
+<h3>look mama i can write a blog</h3>
 <h4>sorry for redrawn</h4>
+<h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id nobis assumenda dolore iste quasi fugiat odio harum error, quo eos provident tenetur laboriosam incidunt veniam repellat possimus? Quibusdam soluta reiciendis odit. Qui laborum fugit doloribus nobis eius voluptatum quia dolor.</h5>
 <img src="images/pal.JFIF" alt="">
 <img src="images/PAL.JFIF" alt="">
 <img src="pal.jfif" alt="">
